// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompilerExpressions Generic test 1`] = `
Tree {
  "_extra": null,
  "_nos": [
    Tree {
      "_extra": null,
      "_nos": [
        Tree {
          "_extra": Lexeme {
            "_coluna": 0,
            "_linha": 0,
            "_palavra": "variaveis",
            "_token": Token {
              "_classe": "comando",
              "_lexemas": [
                [Circular],
              ],
              "_subclasse": "vari",
            },
          },
          "_nos": [],
          "_simbolo": "comando-vari",
        },
        Tree {
          "_extra": null,
          "_nos": [
            Tree {
              "_extra": null,
              "_nos": [
                Tree {
                  "_extra": Lexeme {
                    "_coluna": 4,
                    "_linha": 1,
                    "_palavra": "var",
                    "_token": Token {
                      "_classe": "identificador",
                      "_lexemas": [
                        [Circular],
                        Lexeme {
                          "_coluna": 4,
                          "_linha": 2,
                          "_palavra": "hugo",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 4,
                          "_linha": 4,
                          "_palavra": "var",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 4,
                          "_linha": 5,
                          "_palavra": "hugo",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 12,
                          "_linha": 6,
                          "_palavra": "var",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 18,
                          "_linha": 6,
                          "_palavra": "hugo",
                          "_token": [Circular],
                        },
                      ],
                      "_subclasse": "",
                    },
                  },
                  "_nos": [],
                  "_simbolo": "identificador",
                },
                Tree {
                  "_extra": Lexeme {
                    "_coluna": 7,
                    "_linha": 1,
                    "_palavra": ":",
                    "_token": Token {
                      "_classe": "especial",
                      "_lexemas": [
                        [Circular],
                        Lexeme {
                          "_coluna": 8,
                          "_linha": 2,
                          "_palavra": ":",
                          "_token": [Circular],
                        },
                      ],
                      "_subclasse": "dpo",
                    },
                  },
                  "_nos": [],
                  "_simbolo": "especial-dpo",
                },
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 9,
                        "_linha": 1,
                        "_palavra": "int",
                        "_token": Token {
                          "_classe": "nome-escalar",
                          "_lexemas": [
                            [Circular],
                            Lexeme {
                              "_coluna": 10,
                              "_linha": 2,
                              "_palavra": "int",
                              "_token": [Circular],
                            },
                          ],
                          "_subclasse": "int",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "nome-escalar-int",
                    },
                  ],
                  "_simbolo": "<declaracao_tipo>",
                },
                Tree {
                  "_extra": Lexeme {
                    "_coluna": 12,
                    "_linha": 1,
                    "_palavra": ";",
                    "_token": Token {
                      "_classe": "especial",
                      "_lexemas": [
                        [Circular],
                        Lexeme {
                          "_coluna": 13,
                          "_linha": 2,
                          "_palavra": ";",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 11,
                          "_linha": 4,
                          "_palavra": ";",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 13,
                          "_linha": 5,
                          "_palavra": ";",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 22,
                          "_linha": 6,
                          "_palavra": ";",
                          "_token": [Circular],
                        },
                      ],
                      "_subclasse": "del",
                    },
                  },
                  "_nos": [],
                  "_simbolo": "especial-del",
                },
              ],
              "_simbolo": "<declaracao>",
            },
            Tree {
              "_extra": null,
              "_nos": [
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 4,
                        "_linha": 2,
                        "_palavra": "hugo",
                        "_token": Token {
                          "_classe": "identificador",
                          "_lexemas": [
                            Lexeme {
                              "_coluna": 4,
                              "_linha": 1,
                              "_palavra": "var",
                              "_token": [Circular],
                            },
                            [Circular],
                            Lexeme {
                              "_coluna": 4,
                              "_linha": 4,
                              "_palavra": "var",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 4,
                              "_linha": 5,
                              "_palavra": "hugo",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 12,
                              "_linha": 6,
                              "_palavra": "var",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 18,
                              "_linha": 6,
                              "_palavra": "hugo",
                              "_token": [Circular],
                            },
                          ],
                          "_subclasse": "",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "identificador",
                    },
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 8,
                        "_linha": 2,
                        "_palavra": ":",
                        "_token": Token {
                          "_classe": "especial",
                          "_lexemas": [
                            Lexeme {
                              "_coluna": 7,
                              "_linha": 1,
                              "_palavra": ":",
                              "_token": [Circular],
                            },
                            [Circular],
                          ],
                          "_subclasse": "dpo",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "especial-dpo",
                    },
                    Tree {
                      "_extra": null,
                      "_nos": [
                        Tree {
                          "_extra": Lexeme {
                            "_coluna": 10,
                            "_linha": 2,
                            "_palavra": "int",
                            "_token": Token {
                              "_classe": "nome-escalar",
                              "_lexemas": [
                                Lexeme {
                                  "_coluna": 9,
                                  "_linha": 1,
                                  "_palavra": "int",
                                  "_token": [Circular],
                                },
                                [Circular],
                              ],
                              "_subclasse": "int",
                            },
                          },
                          "_nos": [],
                          "_simbolo": "nome-escalar-int",
                        },
                      ],
                      "_simbolo": "<declaracao_tipo>",
                    },
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 13,
                        "_linha": 2,
                        "_palavra": ";",
                        "_token": Token {
                          "_classe": "especial",
                          "_lexemas": [
                            Lexeme {
                              "_coluna": 12,
                              "_linha": 1,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            [Circular],
                            Lexeme {
                              "_coluna": 11,
                              "_linha": 4,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 13,
                              "_linha": 5,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 22,
                              "_linha": 6,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                          ],
                          "_subclasse": "del",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "especial-del",
                    },
                  ],
                  "_simbolo": "<declaracao>",
                },
              ],
              "_simbolo": "<lista_declaracao>",
            },
          ],
          "_simbolo": "<lista_declaracao>",
        },
      ],
      "_simbolo": "<variable_declaration_part>",
    },
    Tree {
      "_extra": null,
      "_nos": [
        Tree {
          "_extra": Lexeme {
            "_coluna": 0,
            "_linha": 3,
            "_palavra": "inicio",
            "_token": Token {
              "_classe": "comando",
              "_lexemas": [
                [Circular],
              ],
              "_subclasse": "inic",
            },
          },
          "_nos": [],
          "_simbolo": "comando-inic",
        },
        Tree {
          "_extra": null,
          "_nos": [
            Tree {
              "_extra": null,
              "_nos": [
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": null,
                      "_nos": [
                        Tree {
                          "_extra": null,
                          "_nos": [
                            Tree {
                              "_extra": Lexeme {
                                "_coluna": 4,
                                "_linha": 4,
                                "_palavra": "var",
                                "_token": Token {
                                  "_classe": "identificador",
                                  "_lexemas": [
                                    Lexeme {
                                      "_coluna": 4,
                                      "_linha": 1,
                                      "_palavra": "var",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 4,
                                      "_linha": 2,
                                      "_palavra": "hugo",
                                      "_token": [Circular],
                                    },
                                    [Circular],
                                    Lexeme {
                                      "_coluna": 4,
                                      "_linha": 5,
                                      "_palavra": "hugo",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 12,
                                      "_linha": 6,
                                      "_palavra": "var",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 18,
                                      "_linha": 6,
                                      "_palavra": "hugo",
                                      "_token": [Circular],
                                    },
                                  ],
                                  "_subclasse": "",
                                },
                              },
                              "_nos": [],
                              "_simbolo": "identificador",
                            },
                            Tree {
                              "_extra": Lexeme {
                                "_coluna": 8,
                                "_linha": 4,
                                "_palavra": "=",
                                "_token": Token {
                                  "_classe": "especial",
                                  "_lexemas": [
                                    [Circular],
                                    Lexeme {
                                      "_coluna": 9,
                                      "_linha": 5,
                                      "_palavra": "=",
                                      "_token": [Circular],
                                    },
                                  ],
                                  "_subclasse": "atr",
                                },
                              },
                              "_nos": [],
                              "_simbolo": "especial-atr",
                            },
                            Tree {
                              "_extra": null,
                              "_nos": [
                                Tree {
                                  "_extra": null,
                                  "_nos": [
                                    Tree {
                                      "_extra": null,
                                      "_nos": [
                                        Tree {
                                          "_extra": null,
                                          "_nos": [
                                            Tree {
                                              "_extra": null,
                                              "_nos": [
                                                Tree {
                                                  "_extra": Lexeme {
                                                    "_coluna": 10,
                                                    "_linha": 4,
                                                    "_palavra": "0",
                                                    "_token": Token {
                                                      "_classe": "literal-int",
                                                      "_lexemas": [
                                                        [Circular],
                                                        Lexeme {
                                                          "_coluna": 11,
                                                          "_linha": 5,
                                                          "_palavra": "10",
                                                          "_token": [Circular],
                                                        },
                                                      ],
                                                      "_subclasse": "",
                                                    },
                                                  },
                                                  "_nos": [],
                                                  "_simbolo": "literal-int",
                                                },
                                              ],
                                              "_simbolo": "<literal>",
                                            },
                                          ],
                                          "_simbolo": "<expressao_fator>",
                                        },
                                      ],
                                      "_simbolo": "<expressao_termo>",
                                    },
                                  ],
                                  "_simbolo": "<expressao>",
                                },
                              ],
                              "_simbolo": "<retorno_valor>",
                            },
                            Tree {
                              "_extra": Lexeme {
                                "_coluna": 11,
                                "_linha": 4,
                                "_palavra": ";",
                                "_token": Token {
                                  "_classe": "especial",
                                  "_lexemas": [
                                    Lexeme {
                                      "_coluna": 12,
                                      "_linha": 1,
                                      "_palavra": ";",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 13,
                                      "_linha": 2,
                                      "_palavra": ";",
                                      "_token": [Circular],
                                    },
                                    [Circular],
                                    Lexeme {
                                      "_coluna": 13,
                                      "_linha": 5,
                                      "_palavra": ";",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 22,
                                      "_linha": 6,
                                      "_palavra": ";",
                                      "_token": [Circular],
                                    },
                                  ],
                                  "_subclasse": "del",
                                },
                              },
                              "_nos": [],
                              "_simbolo": "especial-del",
                            },
                          ],
                          "_simbolo": "<atribuicao>",
                        },
                      ],
                      "_simbolo": "<comando>",
                    },
                  ],
                  "_simbolo": "<lista_comando>",
                },
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": null,
                      "_nos": [
                        Tree {
                          "_extra": Lexeme {
                            "_coluna": 4,
                            "_linha": 5,
                            "_palavra": "hugo",
                            "_token": Token {
                              "_classe": "identificador",
                              "_lexemas": [
                                Lexeme {
                                  "_coluna": 4,
                                  "_linha": 1,
                                  "_palavra": "var",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 4,
                                  "_linha": 2,
                                  "_palavra": "hugo",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 4,
                                  "_linha": 4,
                                  "_palavra": "var",
                                  "_token": [Circular],
                                },
                                [Circular],
                                Lexeme {
                                  "_coluna": 12,
                                  "_linha": 6,
                                  "_palavra": "var",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 18,
                                  "_linha": 6,
                                  "_palavra": "hugo",
                                  "_token": [Circular],
                                },
                              ],
                              "_subclasse": "",
                            },
                          },
                          "_nos": [],
                          "_simbolo": "identificador",
                        },
                        Tree {
                          "_extra": Lexeme {
                            "_coluna": 9,
                            "_linha": 5,
                            "_palavra": "=",
                            "_token": Token {
                              "_classe": "especial",
                              "_lexemas": [
                                Lexeme {
                                  "_coluna": 8,
                                  "_linha": 4,
                                  "_palavra": "=",
                                  "_token": [Circular],
                                },
                                [Circular],
                              ],
                              "_subclasse": "atr",
                            },
                          },
                          "_nos": [],
                          "_simbolo": "especial-atr",
                        },
                        Tree {
                          "_extra": null,
                          "_nos": [
                            Tree {
                              "_extra": null,
                              "_nos": [
                                Tree {
                                  "_extra": null,
                                  "_nos": [
                                    Tree {
                                      "_extra": null,
                                      "_nos": [
                                        Tree {
                                          "_extra": null,
                                          "_nos": [
                                            Tree {
                                              "_extra": Lexeme {
                                                "_coluna": 11,
                                                "_linha": 5,
                                                "_palavra": "10",
                                                "_token": Token {
                                                  "_classe": "literal-int",
                                                  "_lexemas": [
                                                    Lexeme {
                                                      "_coluna": 10,
                                                      "_linha": 4,
                                                      "_palavra": "0",
                                                      "_token": [Circular],
                                                    },
                                                    [Circular],
                                                  ],
                                                  "_subclasse": "",
                                                },
                                              },
                                              "_nos": [],
                                              "_simbolo": "literal-int",
                                            },
                                          ],
                                          "_simbolo": "<literal>",
                                        },
                                      ],
                                      "_simbolo": "<expressao_fator>",
                                    },
                                  ],
                                  "_simbolo": "<expressao_termo>",
                                },
                              ],
                              "_simbolo": "<expressao>",
                            },
                          ],
                          "_simbolo": "<retorno_valor>",
                        },
                        Tree {
                          "_extra": Lexeme {
                            "_coluna": 13,
                            "_linha": 5,
                            "_palavra": ";",
                            "_token": Token {
                              "_classe": "especial",
                              "_lexemas": [
                                Lexeme {
                                  "_coluna": 12,
                                  "_linha": 1,
                                  "_palavra": ";",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 13,
                                  "_linha": 2,
                                  "_palavra": ";",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 11,
                                  "_linha": 4,
                                  "_palavra": ";",
                                  "_token": [Circular],
                                },
                                [Circular],
                                Lexeme {
                                  "_coluna": 22,
                                  "_linha": 6,
                                  "_palavra": ";",
                                  "_token": [Circular],
                                },
                              ],
                              "_subclasse": "del",
                            },
                          },
                          "_nos": [],
                          "_simbolo": "especial-del",
                        },
                      ],
                      "_simbolo": "<atribuicao>",
                    },
                  ],
                  "_simbolo": "<comando>",
                },
              ],
              "_simbolo": "<lista_comando>",
            },
            Tree {
              "_extra": null,
              "_nos": [
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 4,
                        "_linha": 6,
                        "_palavra": "retorne",
                        "_token": Token {
                          "_classe": "comando",
                          "_lexemas": [
                            [Circular],
                          ],
                          "_subclasse": "reto",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "comando-reto",
                    },
                    Tree {
                      "_extra": null,
                      "_nos": [
                        Tree {
                          "_extra": null,
                          "_nos": [
                            Tree {
                              "_extra": null,
                              "_nos": [
                                Tree {
                                  "_extra": null,
                                  "_nos": [
                                    Tree {
                                      "_extra": null,
                                      "_nos": [
                                        Tree {
                                          "_extra": Lexeme {
                                            "_coluna": 12,
                                            "_linha": 6,
                                            "_palavra": "var",
                                            "_token": Token {
                                              "_classe": "identificador",
                                              "_lexemas": [
                                                Lexeme {
                                                  "_coluna": 4,
                                                  "_linha": 1,
                                                  "_palavra": "var",
                                                  "_token": [Circular],
                                                },
                                                Lexeme {
                                                  "_coluna": 4,
                                                  "_linha": 2,
                                                  "_palavra": "hugo",
                                                  "_token": [Circular],
                                                },
                                                Lexeme {
                                                  "_coluna": 4,
                                                  "_linha": 4,
                                                  "_palavra": "var",
                                                  "_token": [Circular],
                                                },
                                                Lexeme {
                                                  "_coluna": 4,
                                                  "_linha": 5,
                                                  "_palavra": "hugo",
                                                  "_token": [Circular],
                                                },
                                                [Circular],
                                                Lexeme {
                                                  "_coluna": 18,
                                                  "_linha": 6,
                                                  "_palavra": "hugo",
                                                  "_token": [Circular],
                                                },
                                              ],
                                              "_subclasse": "",
                                            },
                                          },
                                          "_nos": [],
                                          "_simbolo": "identificador",
                                        },
                                      ],
                                      "_simbolo": "<expressao_fator>",
                                    },
                                  ],
                                  "_simbolo": "<expressao_termo>",
                                },
                              ],
                              "_simbolo": "<expressao>",
                            },
                            Tree {
                              "_extra": Lexeme {
                                "_coluna": 16,
                                "_linha": 6,
                                "_palavra": "+",
                                "_token": Token {
                                  "_classe": "op-aritmetico",
                                  "_lexemas": [
                                    [Circular],
                                  ],
                                  "_subclasse": "adi",
                                },
                              },
                              "_nos": [],
                              "_simbolo": "op-aritmetico-adi",
                            },
                            Tree {
                              "_extra": null,
                              "_nos": [
                                Tree {
                                  "_extra": null,
                                  "_nos": [
                                    Tree {
                                      "_extra": Lexeme {
                                        "_coluna": 18,
                                        "_linha": 6,
                                        "_palavra": "hugo",
                                        "_token": Token {
                                          "_classe": "identificador",
                                          "_lexemas": [
                                            Lexeme {
                                              "_coluna": 4,
                                              "_linha": 1,
                                              "_palavra": "var",
                                              "_token": [Circular],
                                            },
                                            Lexeme {
                                              "_coluna": 4,
                                              "_linha": 2,
                                              "_palavra": "hugo",
                                              "_token": [Circular],
                                            },
                                            Lexeme {
                                              "_coluna": 4,
                                              "_linha": 4,
                                              "_palavra": "var",
                                              "_token": [Circular],
                                            },
                                            Lexeme {
                                              "_coluna": 4,
                                              "_linha": 5,
                                              "_palavra": "hugo",
                                              "_token": [Circular],
                                            },
                                            Lexeme {
                                              "_coluna": 12,
                                              "_linha": 6,
                                              "_palavra": "var",
                                              "_token": [Circular],
                                            },
                                            [Circular],
                                          ],
                                          "_subclasse": "",
                                        },
                                      },
                                      "_nos": [],
                                      "_simbolo": "identificador",
                                    },
                                  ],
                                  "_simbolo": "<expressao_fator>",
                                },
                              ],
                              "_simbolo": "<expressao_termo>",
                            },
                          ],
                          "_simbolo": "<expressao>",
                        },
                      ],
                      "_simbolo": "<retorno_valor>",
                    },
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 22,
                        "_linha": 6,
                        "_palavra": ";",
                        "_token": Token {
                          "_classe": "especial",
                          "_lexemas": [
                            Lexeme {
                              "_coluna": 12,
                              "_linha": 1,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 13,
                              "_linha": 2,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 11,
                              "_linha": 4,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 13,
                              "_linha": 5,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            [Circular],
                          ],
                          "_subclasse": "del",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "especial-del",
                    },
                  ],
                  "_simbolo": "<retorne_principal>",
                },
              ],
              "_simbolo": "<comando>",
            },
          ],
          "_simbolo": "<lista_comando>",
        },
        Tree {
          "_extra": Lexeme {
            "_coluna": 0,
            "_linha": 7,
            "_palavra": "fim",
            "_token": Token {
              "_classe": "comando",
              "_lexemas": [
                [Circular],
              ],
              "_subclasse": "fim",
            },
          },
          "_nos": [],
          "_simbolo": "comando-fim",
        },
      ],
      "_simbolo": "<statement_part>",
    },
  ],
  "_simbolo": "<program>",
}
`;

exports[`CompilerExpressions Generic test 2`] = `
[
  Tree {
    "_extra": Lexeme {
      "_coluna": 8,
      "_linha": 4,
      "_palavra": "=",
      "_token": Token {
        "_classe": "especial",
        "_lexemas": [
          [Circular],
          Lexeme {
            "_coluna": 9,
            "_linha": 5,
            "_palavra": "=",
            "_token": [Circular],
          },
        ],
        "_subclasse": "atr",
      },
    },
    "_nos": [
      Tree {
        "_extra": Lexeme {
          "_coluna": 4,
          "_linha": 4,
          "_palavra": "var",
          "_token": Token {
            "_classe": "identificador",
            "_lexemas": [
              Lexeme {
                "_coluna": 4,
                "_linha": 1,
                "_palavra": "var",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 4,
                "_linha": 2,
                "_palavra": "hugo",
                "_token": [Circular],
              },
              [Circular],
              Lexeme {
                "_coluna": 4,
                "_linha": 5,
                "_palavra": "hugo",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 12,
                "_linha": 6,
                "_palavra": "var",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 18,
                "_linha": 6,
                "_palavra": "hugo",
                "_token": [Circular],
              },
            ],
            "_subclasse": "",
          },
        },
        "_nos": [],
        "_simbolo": "var",
      },
      Tree {
        "_extra": Lexeme {
          "_coluna": 10,
          "_linha": 4,
          "_palavra": "0",
          "_token": Token {
            "_classe": "literal-int",
            "_lexemas": [
              [Circular],
              Lexeme {
                "_coluna": 11,
                "_linha": 5,
                "_palavra": "10",
                "_token": [Circular],
              },
            ],
            "_subclasse": "",
          },
        },
        "_nos": [],
        "_simbolo": "0",
      },
    ],
    "_simbolo": "=",
  },
  Tree {
    "_extra": Lexeme {
      "_coluna": 9,
      "_linha": 5,
      "_palavra": "=",
      "_token": Token {
        "_classe": "especial",
        "_lexemas": [
          Lexeme {
            "_coluna": 8,
            "_linha": 4,
            "_palavra": "=",
            "_token": [Circular],
          },
          [Circular],
        ],
        "_subclasse": "atr",
      },
    },
    "_nos": [
      Tree {
        "_extra": Lexeme {
          "_coluna": 4,
          "_linha": 5,
          "_palavra": "hugo",
          "_token": Token {
            "_classe": "identificador",
            "_lexemas": [
              Lexeme {
                "_coluna": 4,
                "_linha": 1,
                "_palavra": "var",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 4,
                "_linha": 2,
                "_palavra": "hugo",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 4,
                "_linha": 4,
                "_palavra": "var",
                "_token": [Circular],
              },
              [Circular],
              Lexeme {
                "_coluna": 12,
                "_linha": 6,
                "_palavra": "var",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 18,
                "_linha": 6,
                "_palavra": "hugo",
                "_token": [Circular],
              },
            ],
            "_subclasse": "",
          },
        },
        "_nos": [],
        "_simbolo": "hugo",
      },
      Tree {
        "_extra": Lexeme {
          "_coluna": 11,
          "_linha": 5,
          "_palavra": "10",
          "_token": Token {
            "_classe": "literal-int",
            "_lexemas": [
              Lexeme {
                "_coluna": 10,
                "_linha": 4,
                "_palavra": "0",
                "_token": [Circular],
              },
              [Circular],
            ],
            "_subclasse": "",
          },
        },
        "_nos": [],
        "_simbolo": "10",
      },
    ],
    "_simbolo": "=",
  },
  Tree {
    "_extra": Lexeme {
      "_coluna": 4,
      "_linha": 6,
      "_palavra": "retorne",
      "_token": Token {
        "_classe": "comando",
        "_lexemas": [
          [Circular],
        ],
        "_subclasse": "reto",
      },
    },
    "_nos": [
      Tree {
        "_extra": Lexeme {
          "_coluna": 16,
          "_linha": 6,
          "_palavra": "+",
          "_token": Token {
            "_classe": "op-aritmetico",
            "_lexemas": [
              [Circular],
            ],
            "_subclasse": "adi",
          },
        },
        "_nos": [
          Tree {
            "_extra": Lexeme {
              "_coluna": 12,
              "_linha": 6,
              "_palavra": "var",
              "_token": Token {
                "_classe": "identificador",
                "_lexemas": [
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 1,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 2,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 4,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 5,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                  [Circular],
                  Lexeme {
                    "_coluna": 18,
                    "_linha": 6,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                ],
                "_subclasse": "",
              },
            },
            "_nos": [],
            "_simbolo": "var",
          },
          Tree {
            "_extra": Lexeme {
              "_coluna": 18,
              "_linha": 6,
              "_palavra": "hugo",
              "_token": Token {
                "_classe": "identificador",
                "_lexemas": [
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 1,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 2,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 4,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 5,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 12,
                    "_linha": 6,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  [Circular],
                ],
                "_subclasse": "",
              },
            },
            "_nos": [],
            "_simbolo": "hugo",
          },
        ],
        "_simbolo": "+",
      },
    ],
    "_simbolo": "retorne",
  },
]
`;

exports[`CompilerExpressions Generic test 3`] = `
[
  SimboloIdentificador {
    "_nome": "var",
    "_tipo": "int",
    "_token": Token {
      "_classe": "identificador",
      "_lexemas": [
        Lexeme {
          "_coluna": 4,
          "_linha": 1,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 2,
          "_palavra": "hugo",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 4,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 5,
          "_palavra": "hugo",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 12,
          "_linha": 6,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 18,
          "_linha": 6,
          "_palavra": "hugo",
          "_token": [Circular],
        },
      ],
      "_subclasse": "",
    },
  },
  SimboloIdentificador {
    "_nome": "hugo",
    "_tipo": "int",
    "_token": Token {
      "_classe": "identificador",
      "_lexemas": [
        Lexeme {
          "_coluna": 4,
          "_linha": 1,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 2,
          "_palavra": "hugo",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 4,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 5,
          "_palavra": "hugo",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 12,
          "_linha": 6,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 18,
          "_linha": 6,
          "_palavra": "hugo",
          "_token": [Circular],
        },
      ],
      "_subclasse": "",
    },
  },
]
`;

exports[`CompilerExpressions Generic test 4`] = `
[
  [
    Instruction {
      "_arguments": [
        "0",
      ],
      "_operand": "<0>",
      "_operator": "=",
    },
    Instruction {
      "_arguments": [
        "<0>",
      ],
      "_operand": "var",
      "_operator": "=",
    },
  ],
  [
    Instruction {
      "_arguments": [
        "10",
      ],
      "_operand": "<0>",
      "_operator": "=",
    },
    Instruction {
      "_arguments": [
        "<0>",
      ],
      "_operand": "hugo",
      "_operator": "=",
    },
  ],
  [
    Instruction {
      "_arguments": [
        "hugo",
      ],
      "_operand": "<0>",
      "_operator": "=",
    },
    Instruction {
      "_arguments": [
        "var",
      ],
      "_operand": "<1>",
      "_operator": "=",
    },
    Instruction {
      "_arguments": [
        "<1>",
        "<0>",
      ],
      "_operand": "<2>",
      "_operator": "+",
    },
    Instruction {
      "_arguments": [
        "<2>",
      ],
      "_operand": "retorne",
      "_operator": "retorne",
    },
  ],
]
`;

exports[`CompilerExpressions Generic test 5`] = `
[
  [
    Instruction {
      "_arguments": [
        "0",
      ],
      "_operand": "var",
      "_operator": "=",
    },
  ],
  [
    Instruction {
      "_arguments": [
        "10",
      ],
      "_operand": "hugo",
      "_operator": "=",
    },
  ],
  [
    Instruction {
      "_arguments": [
        "var",
        "hugo",
      ],
      "_operand": "<0>",
      "_operator": "+",
    },
    Instruction {
      "_arguments": [
        "<0>",
      ],
      "_operand": "retorne",
      "_operator": "retorne",
    },
  ],
]
`;

exports[`CompilerExpressions Generic test 6`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "variaveis",
            },
          ],
          "name": "comando-vari",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "name": "var",
                    },
                  ],
                  "name": "identificador",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": ":",
                    },
                  ],
                  "name": "especial-dpo",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "int",
                        },
                      ],
                      "name": "nome-escalar-int",
                    },
                  ],
                  "name": "<declaracao_tipo>",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": ";",
                    },
                  ],
                  "name": "especial-del",
                },
              ],
              "name": "<declaracao>",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "hugo",
                        },
                      ],
                      "name": "identificador",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": ":",
                        },
                      ],
                      "name": "especial-dpo",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "int",
                            },
                          ],
                          "name": "nome-escalar-int",
                        },
                      ],
                      "name": "<declaracao_tipo>",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": ";",
                        },
                      ],
                      "name": "especial-del",
                    },
                  ],
                  "name": "<declaracao>",
                },
              ],
              "name": "<lista_declaracao>",
            },
          ],
          "name": "<lista_declaracao>",
        },
      ],
      "name": "<variable_declaration_part>",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "inicio",
            },
          ],
          "name": "comando-inic",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "var",
                                },
                              ],
                              "name": "identificador",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "=",
                                },
                              ],
                              "name": "especial-atr",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [],
                                                      "name": "0",
                                                    },
                                                  ],
                                                  "name": "literal-int",
                                                },
                                              ],
                                              "name": "<literal>",
                                            },
                                          ],
                                          "name": "<expressao_fator>",
                                        },
                                      ],
                                      "name": "<expressao_termo>",
                                    },
                                  ],
                                  "name": "<expressao>",
                                },
                              ],
                              "name": "<retorno_valor>",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": ";",
                                },
                              ],
                              "name": "especial-del",
                            },
                          ],
                          "name": "<atribuicao>",
                        },
                      ],
                      "name": "<comando>",
                    },
                  ],
                  "name": "<lista_comando>",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "hugo",
                            },
                          ],
                          "name": "identificador",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "=",
                            },
                          ],
                          "name": "especial-atr",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [],
                                                  "name": "10",
                                                },
                                              ],
                                              "name": "literal-int",
                                            },
                                          ],
                                          "name": "<literal>",
                                        },
                                      ],
                                      "name": "<expressao_fator>",
                                    },
                                  ],
                                  "name": "<expressao_termo>",
                                },
                              ],
                              "name": "<expressao>",
                            },
                          ],
                          "name": "<retorno_valor>",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "name": ";",
                            },
                          ],
                          "name": "especial-del",
                        },
                      ],
                      "name": "<atribuicao>",
                    },
                  ],
                  "name": "<comando>",
                },
              ],
              "name": "<lista_comando>",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "retorne",
                        },
                      ],
                      "name": "comando-reto",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "name": "var",
                                            },
                                          ],
                                          "name": "identificador",
                                        },
                                      ],
                                      "name": "<expressao_fator>",
                                    },
                                  ],
                                  "name": "<expressao_termo>",
                                },
                              ],
                              "name": "<expressao>",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "+",
                                },
                              ],
                              "name": "op-aritmetico-adi",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [],
                                          "name": "hugo",
                                        },
                                      ],
                                      "name": "identificador",
                                    },
                                  ],
                                  "name": "<expressao_fator>",
                                },
                              ],
                              "name": "<expressao_termo>",
                            },
                          ],
                          "name": "<expressao>",
                        },
                      ],
                      "name": "<retorno_valor>",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": ";",
                        },
                      ],
                      "name": "especial-del",
                    },
                  ],
                  "name": "<retorne_principal>",
                },
              ],
              "name": "<comando>",
            },
          ],
          "name": "<lista_comando>",
        },
        {
          "children": [
            {
              "children": [],
              "name": "fim",
            },
          ],
          "name": "comando-fim",
        },
      ],
      "name": "<statement_part>",
    },
  ],
  "name": "<program>",
}
`;
